<resources>
    <string name="app_name">Sleep Quality Index</string>

    <string name="initial_Text">Sleep Quality Index</string>
    <string name="login_Text">LOGIN</string>
    <string name="name_Text">name</string>
    <string name="password_Text">password</string>
    <string name="dob_Text">date of birth</string>


    <string name="Button">Next</string>
    <string name="register_Button">register</string>


    <string name="question_Date">How was your sleep?</string>
    <string name="date_Date">dateHere</string>
    <string name="date_Text">Date</string>


    <string name="q1_Text">AM/PM</string>
    <string name="q2_Text">minutes</string>
    <string name="q3_Text">AM</string>

    <string name="screen2_Text">During the past month, how often have you had trouble sleeping because you…</string>
    <string name="showDataText">The responses you gave are :</string>


    <string name="q1_Question">When have you usually gone to bed?</string>
    <string name="q2_Question">How long (in minutes) has it taken you to fall asleep each night?</string>
    <string name="q3_Question">When have you usually gotten up in the morning?</string>
    <string name="q4_Question">How many hours of actual sleep do you get at night? (This may be different than the number of hours you spend in bed) ?</string>
    <string name="q5a_Question">a.Cannot get to sleep within 30 minutes</string>
    <string name="q5b_Question">b.Wake up in the middle of the night or early morning</string>
    <string name="q5c_Question">c.Have to get up to use the bathroom</string>
    <string name="q5d_Question">d.Cannot breathe comfortably</string>
    <string name="q5e_Question">e.Cough or snore loudly</string>
    <string name="q5f_Question">f.Feel too cold</string>
    <string name="q5g_Question">g.Feel too hot</string>
    <string name="q5h_Question">h.Have bad dreams</string>
    <string name="q5i_Question">i.Have pain</string>
    <string name="q5j_Question">j.Other reason(s), please describe, including how often you have had trouble sleeping because of this reason(s):</string>
    <string name="q6_Question">During the past month, how often have you taken medicine (prescribed or “over the counter”) to help you sleep?</string>
    <string name="q7_Question">During the past month, how often have you had trouble staying awake while driving, eating meals, or engaging in social activity?</string>
    <string name="q8_Question">During the past month, how much of a problem has it been for you to keep up enthusiasm to get things done?</string>
    <string name="q9_Question">During the past month, how would you rate your sleep quality overall?</string>


    <string name="optionA">Not during the past month</string>
    <string name="optionB">Less than once a week</string>
    <string name="optionC">Once or twice a week</string>
    <string name="optionD">Three or more times a week</string>
    <string name="q9OptionA">Very Good</string>
    <string name="q9OptionB">Fairly Good</string>
    <string name="q9OptionC">Fairly Bad</string>
    <string name="q9OptionD">Very Bad</string>


</resources>